@@ -101,6 +101,25 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>3.4.4</version>
+        <configuration>
+          <image>
+            <env>
+              <JAVA_TOOL_OPTIONS>
+                -XX:+UseG1GC
+                -XX:MaxGCPauseMillis=100
+                -XX:InitiatingHeapOccupancyPercent=35
+                -XX:G1HeapRegionSize=16m
+                -XX:G1NewSizePercent=20
+                -XX:G1MaxNewSizePercent=30
+                -Xlog:gc*:gc.log:time,uptime,level,tags:filesize=100M,filecount=5
+                -XX:+HeapDumpOnOutOfMemoryError
+                -XX:HeapDumpPath=/tmp/dumps/
+                -XX:MaxRAMPercentage=75
+                -XX:+ExitOnOutOfMemoryError
+              </JAVA_TOOL_OPTIONS>
+            </env>
+          </image>
+        </configuration>
       </plugin>
     </plugins>
   </build>
